completed the string challenge

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1 id='hi'>JavaScript part deux</h1>
 
+    <div id='sonnet'></div>
+
     <!-- <script src="main.js"></script> -->
+    <script src="stringChallenge.js"></script>
 </body>
 </html>
