started object challenge

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id='sonnet'></div>
 
     <!-- <script src="main.js"></script> -->
-    <script src="stringChallenge.js"></script>
+    <!-- <script src="stringChallenge.js"></script> -->
+    <script src="objectchallenge.js"></script>
 </body>
 </html>
